--- a/package.json
+++ b/package.json
@@ -1,29 +1,20 @@
 {
-  "name": "budget-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "npm start",
-    "lite-server": "lite-server"
-  },
-  "author": "",
-  "license": "ISC",
-
-  "dependencies": {
-    "compression": "^1.7.4",
-    "express": "^4.17.1",
-    "lite-server": "^2.5.3",
-    "mongoose": "^5.5.15",
-    "morgan": "^1.9.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "webpack": "^4.32.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-pwa-manifest": "^4.0.0"
-}
+	"name": "budget-app",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node server.js",
+		"lite-server": "lite-server"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"compression": "^1.7.4",
+		"express": "^4.17.1",
+		"lite-server": "^2.5.3",
+		"mongoose": "^5.5.15",
+		"morgan": "^1.9.1"
+	}
 }
